# codelens

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: codelens.yml  tests.yml
benchmark/: README.md  build_seed.py  metrics.py  mine_reverts.py  run_eval.py  schema.py
benchmark/data/: empty_mock.json  seed.jsonl
demo/: RECORDING.md  demo.tape  run_demo.bat  run_demo.ps1  run_demo.sh
demo/scenarios/cache_invalidation/: .codelens.toml  PR_BODY.md  mock_responses.json
demo/scenarios/cache_invalidation/after/: cache.py
demo/scenarios/cache_invalidation/before/: cache.py
examples/: .codelens.toml  sample_pr.md
src/codelens/: __init__.py  cli.py  config.py  diff_parser.py  report.py
src/codelens/analyzers/: __init__.py  base.py  intent_drift.py  side_effects.py  test_gap.py
src/codelens/prompts/: intent_drift.txt  side_effects.txt  test_gap.txt
src/codelens/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
tests/: conftest.py  test_benchmark.py  test_diff_parser.py  test_intent_drift.py
