[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens"
version = "0.1.0"
description = "LLM-powered semantic review for pull requests — intent drift, side effects, and test coverage gaps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CodeLens contributors" }]
keywords = ["llm", "code-review", "static-analysis", "ai-coding", "pull-request"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "anthropic>=0.39.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "unidiff>=0.7.5",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5.0", "mypy>=1.10"]

[project.scripts]
codelens = "codelens.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/codelens"
Issues = "https://github.com/yourname/codelens/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
